Fix broken CSS

--- a/src/admin/layers/uploader/UppyUploader.css
+++ b/src/admin/layers/uploader/UppyUploader.css
@@ -35,17 +35,3 @@
 .uppy-StatusBar-actions .uppy-StatusBar-action {
     margin: 0 10px;
 }
-
-/*
-.uppy-DragDrop-note {
-    white-space: pre-line;
-    /* This will respect newline characters in the text */
-text-align: left;
-/* Align the text to the left */
-margin: 10px 0;
-padding: 10px;
-border: 1px solid #ddd;
-background-color: #f9f9f9;
-}
-
-*/
